# olist-analytics-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
dbt_olist/: dbt_project.yml  profiles.yml
dbt_olist/models/: _src_olist.yml
dbt_olist/models/marts/: _marts_schema.yml  dim_customers.sql  dim_date.sql  dim_products.sql  dim_sellers.sql  fct_order_items.sql  fct_orders.sql  fct_payments.sql  mart_product_performance.sql  mart_user_behavior.sql
dbt_olist/models/staging/: _stg_schema.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_product_category_name_translation.sql  stg_products.sql  stg_sellers.sql
dlt-pipeline/: dlt_pipeline.py
kestra/: flow.yaml  pipeline.yaml
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
