[project]
name = "elt-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dlt[bigquery]>=1.24.0",
    "kaggle>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "kaggle>=2.0.0",
    "ruff>=0.15.8",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
fix = true